# test_for_rishat

./: .gitignore  README.md  manage.py  pyproject.toml
payment_service/: models.py  urls.py  views.py
payment_service/migrations/: 0001_initial.py  0002_alter_item_name.py
payment_service/templates/payment_service/: base.html  cancel.html  item.html  success.html
rishat_app/: asgi.py  settings.py  urls.py  wsgi.py
